[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = imagecube
description = Astropy affiliated package
long_description = This is a package for doing X that relies on astropy
author = Sophia Lianou, Jeff Taylor, Pauline Barmby
author_email = pbarmby@uwo.ca
license = BSD
url = http://astropy.org/
edit_on_github = False
github_project = PBarmby/imagecube
