[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = imagecube
description = Image processing for multiwavelength imaging
long_description = Does unit conversion, image resolution, resolution matching
author = Sophia Lianou, Jeff Taylor, Pauline Barmby
author_email = pbarmby@uwo.ca
license = BSD
url = http://sophiathl.github.io/imagecube
edit_on_github = False
github_project = PBarmby/imagecube
